# ngv-trader

./: .env.example  .gitignore  AGENTS.local.md  AGENTS.md  CHANGELOG.md  LICENSE  README.md  Taskfile.yaml  alembic.ini  aps.lock.yaml  aps.yaml  pyproject.toml  release-please-config.json
.claude/agents/: ngv-analyst.md  ngv-dba.md  ngv-quorum.md  ngv-swe.md  ngv-ux.md
.github/workflows/: release-please.yml
.trunk/: trunk.yaml
alembic/: env.py
alembic/versions/: 20260217221407_create_positions_table.py  20260218000000_add_accounts_table.py  20260219090000_add_orders_and_order_events_tables.py  20260219100000_add_jobs_table.py  20260219110000_add_worker_heartbeats_table.py  20260219120000_add_jobs_archived_at.py  (+15 more)
docs/: _index.md  client-portal-combo-spreads.md  contract-display-names.md  contract-ref-setup.md  core-ux-actions.md  cpapi-auth-old-vs-new.md  download-positions.md  getting-started.md  install-python-and-frontend.md  plan-changes-to-manually-test.md  planning-agents-corrum.md  planning-spec-format.md  runbook-client-portal-gateway.md  secrets-using-1password.md  security-data.md  spec-bag-order-combo-visibility.md  spec-bun-migration.md  spec-client-portal-combo-spreads.md  spec-first-class-realized-pnl-on-trades.md  spec-first-class-spread-fields.md  spec-fix-tradebot-selecting-CL-options.md  spec-remove-order-execution.md  spec-restore-order-fetching-and-submission.md  spec-security-data.md  spec-sse-jobs-orders-ui.md  spec-tagging-ux-separation.md  spec-trade-tagging.md  spec-tradebot-contract-metadata-autofetch.md  spec-trades-and-executions-sync.md  spec-worker-order-recovery.md  spreads-across-orders-trades-executions.md  trade-tagging.md  tradebot-chatbot.md  tradebot-langgraph-implementation.md  tradebot-workers.md  trades-and-executions-sync.md  user-preferences-privacy-mode.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
scripts/: check.py  download_positions.py  fetch-cl-contracts.py  setup_db.py  test_chain_discovery.py  test_tws_connection.py  validate_env.py  work_jobs.py  work_order_queue.py
src/: db.py  models.py  schemas.py
(+64 files in other folders)
