[project]
name = "ngtrader"
version = "0.1.0"
description = "Review market price action, monitor portfolio strategies, and execute live trades with AI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary - Copyright (c) 2026 Weston Platter. All rights reserved." }
dependencies = [
  "ib-async>=2.1.0",
  "langgraph>=0.2.76",
  "python-dotenv>=1.2.1",
  "sqlalchemy>=2.0",
  "alembic>=1.14",
  "psycopg2-binary>=2.9",
  "pandera[pandas]>=0.20",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
default-groups = []

[dependency-groups]
dev = ["typer>=0.24.1", "ipdb>=0.13.13", "ruff>=0.15.2"]

# -- Ruff: complexity guardrails ----------------------------------------------
[tool.ruff.lint]
select = [
  "C901",    # McCabe cyclomatic complexity
  "PLR0911", # too-many-return-statements
  "PLR0912", # too-many-branches
  "PLR0913", # too-many-arguments
  "PLR0915", # too-many-statements
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6
max-statements = 50
max-branches = 8
max-returns = 5

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR0915", "PLR0913"]
